Fix overflow, add makefile

--- a/_v2src/scss/index.scss
+++ b/_v2src/scss/index.scss
@@ -404,3 +404,6 @@ button.btn, a.btn {
 	color: $WHITE_BRIGHT;
 	cursor: pointer;
 }
+.no-overflow {
+	overflow: hidden;
+}
